visit page improved

--- a/explore.html
+++ b/explore.html
@@ -31,10 +31,12 @@
             <span class="fa fa-clock" id="header-time-icon"></span>
             <p id="header-time-text">Open today 10:00 — 16:00</p>
           </div>
-          <button class="ticket-button"><span>Buy tickets</span><span class="fa fa-ticket-alt ticket-icon"></span></button>
+          <button class="ticket-button"><span>Buy tickets</span><span
+              class="fa fa-ticket-alt ticket-icon"></span></button>
         </div>
         <div class="modal" id="ticket-modal">
-          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i class="fas fa-times close-icon"></i>
+          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i
+              class="fas fa-times close-icon"></i>
           </div>
           <div class="modal-body">
             <p class="modal-text">
@@ -119,21 +121,21 @@
             </div>
             <div class="info-box" id="item-2">
               <div id="club-anchor"></div>
-              <h4 class="info-box-heading">Join a Children's Club</h4>
-              <h5>Young Stars Club</h5>
+              <h3 class="info-box-heading">Join a Children's Club</h3>
+              <h4 class="info-box-sub-heading">Young Stars Club</h4>
               <p>
-                We also have the <em>Young Stars Club</em> which meets once a week
-                on a Saturday between 10:00 and 13:00 where you’ll get to explore
+                We also have the <strong>Young Stars Club</strong> which meets once a week
+                on a <em>Saturday between 10:00 and 13:00</em> where you’ll get to explore
                 and experiment with our team of experts.
               </p>
-              <h5>The Holiday Club</h5>
+              <h4 class="info-box-sub-heading">The Holiday Club</h4>
               <p>
-                During the school holidays we run <em>The Holiday Club</em> where
+                During the school holidays we run <strong>The Holiday Club</strong> where
                 you can join other children your age to go on a journey of
                 discovery. Each holiday we pick a new theme to explore.
               </p>
               <p>
-                To find out more about The Young Stars Club or The Holiday Club
+                To find out more about <strong>The Young Stars Club</strong> or <strong>The Holiday Club</strong>
                 and how you can join, send us a message.
               </p>
             </div>
@@ -186,28 +188,26 @@
             <a href="contact.html" class="button">Get in touch</a>
           </div>
         </div>
-        <div class="newsletter-wrapper">
-          <div class="blur">
-            <section class="newsletter-section">
-              <p for="newsletter">
-                Sign up to our <em>newsletter</em> and be the first to know about our
-                exciting <em>new stuff</em>:
-              </p>
-              <div class="newsletter-success">
-                Welcome! Please check your inbox
-              </div>
-              <form class="newsletter-form">
-                <label for="newsletter-input">E-mail</label>
-                <div class="input-wrapper">
-                  <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
-                  <button id="sign-up-button" type="submit" name="subscribe" value="SIGN UP">Sign up</button>
-                </div>
-              </form>
-              <p id="newsletter-error" class="error-message">
-                Please enter a valid e-mail address
-              </p>
-            </section>
-          </div>
+      </div>
+      <div class="newsletter-wrapper">
+        <div class="blur">
+          <section class="newsletter-section">
+            <label class="newsletter-label" for="newsletter">
+              Sign up to our <em>newsletter</em> and be the first to know about our
+              exciting <em>new stuff</em>:
+            </label>
+            <div class="newsletter-success">
+              Welcome! Please check your inbox
+            </div>
+            <form class="newsletter-form">
+              <!-- <label for="newsletter-input">E-mail</label> -->
+              <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
+              <button id="sign-up-button" type="submit" name="subscribe">Sign up</button>
+            </form>
+            <p id="newsletter-error" class="error-message">
+              Please enter a valid e-mail address
+            </p>
+          </section>
         </div>
       </div>
     </main>
