--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
           <div class="modal-body">
             <p class="modal-text">
               Please choose the desired number of tickets and click proceed in
-              order to finalize your purchase on www.ticketmaster.com
+              order to finalize your purchase.
             </p>
-            <form action="" class="ticket-form">
+            <p class="modal-text"><a href="visit.html">Price list can be found here</a></p>
+            <form class="ticket-form">
               <div class="form-block">
                 <label for="select" class="modal-label">Number of tickets</label>
                 <select name="tickets" id="select">
@@ -182,8 +183,8 @@
             <span class="info-heading">OPEN TODAY 10:00 — 16:00</span>
           </div>
           <ul class="info-list">
-            <li>Entrance tickets only 100 NOK/person</li>
-            <li>Guided tours 150 NOK/person</li>
+            <li>Admission tickets only 100 NOK per person</li>
+            <li>Guided tours 150 NOK per person</li>
           </ul>
         </div>
       </section>
@@ -296,27 +297,26 @@
             <!-- <p>Click Images to Learn More</p> -->
           </section>
         </div>
-
-        <div class="newsletter-wrapper">
-          <div class="blur">
-            <section class="newsletter-section">
-              <label class="newsletter-label" for="newsletter">
-                Sign up to our <em>newsletter</em> and be the first to know about our
-                exciting <em>new stuff</em>:
-              </label>
-              <div class="newsletter-success">
-                Welcome! Please check your inbox
-              </div>
-              <form class="newsletter-form">
-                <!-- <label for="newsletter-input">E-mail</label> -->
-                <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
-                <button id="sign-up-button" type="submit" name="subscribe">Sign up</button>
-              </form>
-              <p id="newsletter-error" class="error-message">
-                Please enter a valid e-mail address
-              </p>
-            </section>
-          </div>
+      </div>
+      <div class="newsletter-wrapper">
+        <div class="blur">
+          <section class="newsletter-section">
+            <label class="newsletter-label" for="newsletter">
+              Sign up to our <em>newsletter</em> and be the first to know about our
+              exciting <em>new stuff</em>:
+            </label>
+            <div class="newsletter-success">
+              Welcome! Please check your inbox
+            </div>
+            <form class="newsletter-form">
+              <!-- <label for="newsletter-input">E-mail</label> -->
+              <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
+              <button id="sign-up-button" type="submit" name="subscribe">Sign up</button>
+            </form>
+            <p id="newsletter-error" class="error-message">
+              Please enter a valid e-mail address
+            </p>
+          </section>
         </div>
       </div>
     </main>
