--- a/exhibitions.html
+++ b/exhibitions.html
@@ -259,34 +259,29 @@
             <p class="gallery-quote">"More than 1000 unique exhibits to explore"</p>
           </section>
         </div>
-
-
-        <div class="newsletter-wrapper">
-          <div class="blur">
-            <section class="newsletter-section">
-              <p for="newsletter">
-                Sign up to our <em>newsletter</em> and be the first to know about our
-                exciting <em>new stuff</em>:
-              </p>
-              <div class="newsletter-success">
-                Welcome! Please check your inbox
-              </div>
-              <form class="newsletter-form">
-                <label for="newsletter-input">E-mail</label>
-                <div class="input-wrapper">
-                  <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
-                  <button id="sign-up-button" type="submit" name="subscribe" value="SIGN UP">Sign up</button>
-                </div>
-              </form>
-              <p id="newsletter-error" class="error-message">
-                Please enter a valid e-mail address
-              </p>
-            </section>
-          </div>
-        </div>
       </div>
   </div>
-
+  <div class="newsletter-wrapper">
+    <div class="blur">
+      <section class="newsletter-section">
+        <label class="newsletter-label" for="newsletter">
+          Sign up to our <em>newsletter</em> and be the first to know about our
+          exciting <em>new stuff</em>:
+        </label>
+        <div class="newsletter-success">
+          Welcome! Please check your inbox
+        </div>
+        <form class="newsletter-form">
+          <!-- <label for="newsletter-input">E-mail</label> -->
+          <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
+          <button id="sign-up-button" type="submit" name="subscribe">Sign up</button>
+        </form>
+        <p id="newsletter-error" class="error-message">
+          Please enter a valid e-mail address
+        </p>
+      </section>
+    </div>
+  </div>
   </main>
   </div>
   <footer>
