new button color

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h2 class="hero-sub-heading">The place where science comes to life</h2>
           </hgroup>
           <a href="https://www.ticketmaster.com/" class="button hero-button">
-            About us
+            Learn more
           </a>
         </div>
         <a href="explore.html">
@@ -171,7 +171,7 @@
           <div class="category-box" id="events">
             <a href="#news-anchor">
               <div class="category-box-content">
-                <figure><span class="fa fa-rocket category-icon"></span></figure>
+                <figure><span class="fa fa-rocket category-icon"></span></figure>s
                 <figcaption class="category-caption">SPECIAL EVENTS</figcaption>
               </div>
             </a>
@@ -195,7 +195,10 @@
         <div class="content-container">
           <section class="news-section">
             <!-- <div id="news-anchor"></div> -->
+
+            <!-- <div class="main-heading-left"></div> -->
             <h2 id="special-event" class="main-heading">News & special events</h2>
+
             <div class="slider-wrapper">
               <div class="slider-outer-container">
                 <div class="slider-inner-container">
