test of new heading

--- a/about_us.html
+++ b/about_us.html
@@ -99,7 +99,10 @@
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-          <h1 class="main-heading">About us</h1>
+          <div class="main-heading-wrapper">
+            <div class="main-heading-left"></div>
+            <h1 class="main-heading">About us</h1>
+          </div>
           <section class="section-container vision-section">
             <div class="info-box item-1">
               <h5 class="info-box-heading">Let us explore together</h5>
@@ -153,7 +156,10 @@
             </a>
           </div>
           <section class="gallery-section">
-            <h4 class="main-heading">Meet our passionate tour guides</h4>
+            <div class="main-heading-wrapper">
+              <div class="main-heading-left"></div>
+              <h4 class="main-heading">Meet our passionate tour guides</h4>
+            </div>
             <div class="gallery-wrapper">
               <figure class="tourguide">
                 <img src="images\charles.png"
