--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,10 @@
     <main>
       <div class="main-wrapper">
         <div class="content-container">
+          <div class="main-heading-wrapper">
+            <div class="main-heading-left"></div>
           <h1 class="main-heading">Contact & FAQ</h1>
+          </div>
           <section class="contact-section">
             <form class="form info-box">
               <h2>If you need to get in touch with us, please use this form:</h2>
