--- a/exhibitions.html
+++ b/exhibitions.html
@@ -100,7 +100,10 @@
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-          <h1 class="main-heading">Exhibitions</h1>
+          <div class="main-heading-wrapper">
+            <div class="main-heading-left"></div>
+            <h1 class="main-heading">Exhibitions</h1>
+          </div>
           <section class="section-container">
             <div class="card-wrapper">
 
