--- a/get_involved.html
+++ b/get_involved.html
@@ -99,7 +99,10 @@
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-          <h1 class="main-heading">You can support our museum in various ways</h1>
+          <div class="main-heading-wrapper">
+            <div class="main-heading-left"></div>
+            <h1 class="main-heading">You can support our museum in various ways</h1>
+          </div>
           <section class="section-container">
             <div class="info-box" id="item-1">
               <h2 class="info-box-heading">Donations</h2>
