--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
         <div class="content-container">
           <section class="news-section">
             <!-- <div id="news-anchor"></div> -->
-
-            <!-- <div class="main-heading-left"></div> -->
-            <h2 id="special-event" class="main-heading">News & special events</h2>
-
+            <div class="main-heading-wrapper">
+              <div class="main-heading-left"></div>
+              <h2 id="special-event" class="main-heading">News & special events</h2>
+            </div>
             <div class="slider-wrapper">
               <div class="slider-outer-container">
                 <div class="slider-inner-container">
@@ -282,7 +282,10 @@
           </section>
 
           <section class="clubs-section">
-            <h3 id="clubs" class="main-heading">Join one of our children clubs</h3>
+            <div class="main-heading-wrapper">
+              <div class="main-heading-left"></div>
+              <h3 id="clubs" class="main-heading">Join one of our children clubs</h3>
+            </div>
             <div class="clubs-wrapper">
               <figure class="clubs">
                 <a href="explore.html#club-anchor"><img src="images\club_1.jpg"
