--- a/explore.html
+++ b/explore.html
@@ -101,7 +101,10 @@
     <main>
       <div class="main-wrapper">
         <div class="content-container">
-          <h1 class="main-heading">More to explore</h1>
+          <div class="main-heading-wrapper">
+            <div class="main-heading-left"></div>
+            <h1 class="main-heading">More to explore</h1>
+          </div>
           <section class="section-container">
             <div class="blue info-box" id="item-1">
               <h2 class="info-box-heading">For Kids</h2>
