--- a/visit.html
+++ b/visit.html
@@ -101,9 +101,12 @@
     <main>
       <div class="main-wrapper">
         <div class="content-container">
+          <div class="main-heading-wrapper">
+            <div class="main-heading-left"></div>
           <h1 class="main-heading">
             You will find us right in the center of Bergen
           </h1>
+          </div>
           <section class="info-section">
             <div class="info-box" id="item-1">
               <h2 class="info-box-heading">Admission</h2>
