--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                         <img class="slide-image" src="images\t-rex.jpg"
                           alt="Close up photo of the head of a of gaping T-Rex skeleton, exposing all it's razor-sharp teeth" />
                       </figure>
+
                       <div class="slide-body">
                         <h5 class="slide-heading">Night in the Museum</h5>
                         <p>
@@ -231,8 +232,8 @@
                       <div class="slide-body">
                         <h5 class="slide-heading">Visiting Professor Of Aeronautics</h5>
                         <p>
-                          It is our pleasure to announce that Professor Sheila
-                          Widnall from the Massachusetts Institute of Technology
+                          It is our pleasure to announce that <em>Professor Sheila Widnall</em>
+                          from the <em>Massachusetts Institute of Technology</em>
                           will visit our museum.
                         </p>
                         <p>
@@ -251,7 +252,7 @@
                       <div class="slide-body">
                         <h5 class="slide-heading">Energica Exhibition</h5>
                         <p>
-                          On loan from the NEMO Science Museum in Amsterdam, the
+                          On loan from the <em>NEMO Science Museum in Amsterdam</em>, the
                           Energetica exhibition is coming to the Community Science
                           Museum.
                         </p>
@@ -266,18 +267,18 @@
                     </div>
                   </div>
                 </div>
+                <div class="indicator-container">
+                  <div id="preview1" class="indicator selected"></div>
+                  <div id="preview2" class="indicator"></div>
+                  <div id="preview3" class="indicator"></div>
+                </div>
                 <div id="left" class="slider-controls">
                   <i id="arrow-left" class="fas fa-chevron-left"></i>
                 </div>
                 <div id="right" class="slider-controls">
                   <i id="arrow-right" class="fas fa-chevron-right"></i>
                 </div>
-              </div>
-              <div class="slider-preview">
-                <img id="preview1" class="preview-image selected" src="images\t-rex.jpg" alt="" />
-                <img id="preview2" class="preview-image" src="images\aeronautic.jpg" alt="" />
-                <img id="preview3" class="preview-image" src="images\energica.jpg" alt="" />
-              </div>
+              </div> 
             </div>
           </section>
 
