--- a/visit.html
+++ b/visit.html
@@ -152,7 +152,7 @@
                 width="200" height="350" allowfullscreen=""></iframe>
             </div>
             <div class="info-box" id="item-3">
-              <h2 class="info-box-heading">Hours:</h2>
+              <h2 class="info-box-heading">Hours & prices:</h2>
               <table>
                 <tr>
                   <th scope="row">Monday:</th>
@@ -183,7 +183,6 @@
                   <td>09:00 — 13:00</td>
                 </tr>
               </table>
-              <h2 class="info-box-heading">Prices:</h2>
               <table>
                 <tr>
                   <th scope="row">Children under 5:</th>
