--- a/exhibitions.html
+++ b/exhibitions.html
@@ -102,7 +102,7 @@
         <div class="content-container">
           <div class="main-heading-wrapper">
             <div class="main-heading-left"></div>
-            <h1 class="main-heading">Exhibitions</h1>
+            <h1 class="main-heading">Exhibition spaces</h1>
           </div>
           <section class="section-container">
             <div class="card-wrapper">
@@ -235,7 +235,10 @@
             </div>
           </section>
           <section class="gallery-section">
-            <h3 class="main-heading">Come visit us and continue your exploration</h3>
+            <div class="main-heading-wrapper">
+              <div class="main-heading-left"></div>
+              <h3 class="main-heading">Come visit us and continue your exploration</h3>
+            </div>
             <div class="gallery-wrapper">
               <figure>
                 <img src="../images/gallery-1.jpg"
