--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           <div class="category-box" id="events">
             <a href="#news-anchor">
               <div class="category-box-content">
-                <figure><span class="fa fa-rocket category-icon"></span></figure>s
+                <figure><span class="fa fa-rocket category-icon"></span></figure>
                 <figcaption class="category-caption">SPECIAL EVENTS</figcaption>
               </div>
             </a>
@@ -278,7 +278,7 @@
                 <div id="right" class="slider-controls">
                   <i id="arrow-right" class="fas fa-chevron-right"></i>
                 </div>
-              </div> 
+              </div>
             </div>
           </section>
 
