--- a/contact.html
+++ b/contact.html
@@ -100,11 +100,14 @@
         <div class="content-container">
           <div class="main-heading-wrapper">
             <div class="main-heading-left"></div>
-          <h1 class="main-heading">Contact & FAQ</h1>
+            <h1 class="main-heading">Contact & FAQ</h1>
+          </div>
+          <div class="info-box">
+            <h2 class="main-sub-heading">If you need to get in touch with us, please use this form:
+            </h2>
           </div>
           <section class="contact-section">
             <form class="form info-box">
-              <h2>If you need to get in touch with us, please use this form:</h2>
               <ul class="form-info">
                 <li>
                   Submit your inquiry, and we will get back to you as soon as
