--- a/exhibitions.html
+++ b/exhibitions.html
@@ -104,14 +104,17 @@
             <div class="main-heading-left"></div>
             <h1 class="main-heading">Exhibition spaces</h1>
           </div>
+          <div class="info-box">
+            <h2 class="main-sub-heading">Our more than 1000 unique exhibitions are dived into 5 main spaces for you to
+              explore</h2>
+          </div>
           <section class="section-container">
             <div class="card-wrapper">
-
               <!-- <div id="cosmology-anchor"></div> -->
-              <div class="card cosmology">
-                <div class="card-image"><img src="images\cosmology_large.jpg" /></div>
-                <h2 id="cosmology" class="card-heading">Cosmology</h2>
+              <div class="card" id="cosmology-anchor">
+                <div class="card-image"><img src="images\cosmology_large.jpg" /></div>              
                 <div class="card-body">
+                  <h2 id="cosmology" class="card-heading">Cosmology</h2>
                   <p>
                     Explore the wonders of our cosmos. Our fantastic exhibition,
                     ‘The Sky Above Us’, explores the night sky and what we can see
@@ -129,10 +132,10 @@
               </div>
 
               <!-- <div id="evolution-anchor"></div> -->
-              <div class="card evolution">
-                <div class="card-image"><img src="images/evolution_large.jpg" /></div>
-                <h2 id="evolution" class="card-heading">Evolution</h2>
+              <div class="card" id="evolution-anchor">
+                <div class="card-image"><img src="images/evolution_large.jpg" /></div>              
                 <div class="card-body">
+                  <h2 id="evolution" class="card-heading">Evolution</h2>
                   <p>
                     For centuries, philosophers and scientists have wrestled with
                     the question of our origins. Where do we come from and how did
@@ -150,10 +153,10 @@
               </div>
 
               <!-- <div id="biology-anchor"></div> -->
-              <div class="card biology">
+              <div class="card" id="biology-anchor">
                 <div class="card-image"><img src="images/biology_large.jpg" /></div>
-                <h2 id="biology" class="card-heading">Biology & medicine</h2>
                 <div class="card-body">
+                  <h2 id="biology" class="card-heading">Biology & medicine</h2>
                   <p>
                     From micro-organisms to the human body, major breakthroughs in
                     biology are offering us unique insights into the great wonders
@@ -171,11 +174,10 @@
               </div>
 
               <!-- <div id="robotics-anchor"></div> -->
-
-              <div class="card robotics">
+              <div class="card" id="robotics-anchor">
                 <div class="card-image"><img src="images/robotics_large.jpg" /></div>
-                <h2 id="robotics" class="card-heading">Robotics & AI</h2>
                 <div class="card-body">
+                  <h2 id="robotics" class="card-heading">Robotics & AI</h2>
                   <p>
                     The information revolution is here and robotics and artificial
                     intelligence are the science of the future.
@@ -192,12 +194,11 @@
                 </div>
               </div>
 
-
               <!-- <div id="ecology-anchor"></div> -->
-              <div class="card ecology">
+              <div class="card" id="ecology-anchor">
                 <div class="card-image"><img src="images/ecology_large.jpg" /></div>
-                <h2 id="ecology" class="card-heading">ECOLOGY</h2>
                 <div class="card-body">
+                  <h2 id="ecology" class="card-heading">ECOLOGY</h2>
                   <p>
                     As we learn more and more of the impact humans are having on
                     the planet, the more important it becomes that scientists
@@ -214,10 +215,10 @@
               </div>
 
               <!-- <div id="ecology-anchor"></div> -->
-              <div class="card special-events">
+              <div class="card" id="ecology-anchor">
                 <div class="card-image"><img src="images/evolution_large.jpg" /></div>
-                <h2 id="special-events" class="card-heading">Special events</h2>
                 <div class="card-body">
+                  <h2 id="special-events" class="card-heading">Special events</h2>
                   <p>
                     As we learn more and more of the impact humans are having on
                     the planet, the more important it becomes that scientists
@@ -262,7 +263,7 @@
                 <img src="../images/gallery-6.jpg" alt="a kid with virtual reality headset" />
               </figure>
             </div>
-            <p class="gallery-quote">"More than 1000 unique exhibits to explore"</p>
+            <!-- <p class="gallery-quote">"More than 1000 unique exhibits to explore"</p> -->
           </section>
         </div>
       </div>
