--- a/explore.html
+++ b/explore.html
@@ -105,6 +105,12 @@
             <div class="main-heading-left"></div>
             <h1 class="main-heading">More to explore</h1>
           </div>
+          <div class="info-box">
+            <h2 class="main-sub-heading">Here you can learn more about what our museum can offer, whether you are a kid,
+              a
+              teacher or a researcher.
+            </h2>
+          </div>
           <section class="section-container">
             <div class="blue info-box" id="item-1">
               <h2 class="info-box-heading">For Kids</h2>
