--- a/get_involved.html
+++ b/get_involved.html
@@ -103,6 +103,10 @@
             <div class="main-heading-left"></div>
             <h1 class="main-heading">You can support our museum in various ways</h1>
           </div>
+          <div class="info-box">
+            <h2 class="main-sub-heading">In order for us to create the best possible museum, we need your contribution
+            </h2>
+          </div>
           <section class="section-container">
             <div class="info-box" id="item-1">
               <h2 class="info-box-heading">Donations</h2>
