--- a/visit.html
+++ b/visit.html
@@ -103,9 +103,13 @@
         <div class="content-container">
           <div class="main-heading-wrapper">
             <div class="main-heading-left"></div>
-          <h1 class="main-heading">
-            You will find us right in the center of Bergen
-          </h1>
+            <h1 class="main-heading">
+              You will find us right in the center of Bergen
+            </h1>
+          </div>
+          <div class="info-box">
+            <h2 class="main-sub-heading">All you need to know about admission, location, opening hours and facilities.
+            </h2>
           </div>
           <section class="info-section">
             <div class="info-box" id="item-1">
