info section improved

--- a/index.html
+++ b/index.html
@@ -178,11 +178,12 @@
           </div>
         </div>
         <div class="info-container">
-          <div class="time-wrapper">
-            <span class="fa fa-clock"></span>
-            <span class="info-heading">OPEN TODAY 10:00 — 16:00</span>
-          </div>
+
           <ul class="info-list">
+            <div class="time-wrapper">
+              <span class="fa fa-clock info-icon"></span>
+              <span class="info-heading">OPEN TODAY 10:00 — 16:00</span>
+            </div>
             <li>Admission tickets only 100 NOK per person</li>
             <li>Guided tours 150 NOK per person</li>
           </ul>
